--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.8.1",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
@@ -10,6 +11,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
