--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "axios": "^1.8.1",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
