--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^1.8.1",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
-    "jspdf": "^3.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
